--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -9,4 +9,5 @@ python-jose==3.3.0
 requests==2.31.0
 authlib==1.2.1
 Werkzeug==2.3.7
-psycopg2-binary==2.9.10 
+psycopg2-binary==2.9.10
+flask-wtf==1.2.2 
